--- a/sonarqube/templates/service.yaml
+++ b/sonarqube/templates/service.yaml
@@ -1,12 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "sonarqube.fullname" . }}
+  name: {{ include "firstchart.fullname" . }}
   labels:
-    app: {{ template "sonarqube.name" . }}
-    chart: {{ template "sonarqube.chart" . }}
-    release: {{ .Release.Name }}
-    heritage: {{ .Release.Service }}
+    {{- include "firstchart.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -15,5 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    app: {{ template "helm-guestbook.name" . }}
-    release: {{ .Release.Name }}
+    {{- include "firstchart.selectorLabels" . | nindent 4 }}
