--- a/sonarqube/values.yaml
+++ b/sonarqube/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: sonarqube
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "1.21.0"
+  tag: "latest"
 
 imagePullSecrets: []
 nameOverride: ""
