--- a/sonarqube/values.yaml
+++ b/sonarqube/values.yaml
@@ -8,7 +8,7 @@ image:
   repository: sonarqube
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: "latest"
+  tag: "10.2.0"
 
 imagePullSecrets: []
 nameOverride: ""
