--- a/sonarqube/templates/deployment.yaml
+++ b/sonarqube/templates/deployment.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "firstchart.fullname" . }}
+  name: {{ include "sonarqube.fullname" . }}
   labels:
-    {{- include "firstchart.labels" . | nindent 4 }}
+    {{- include "sonarqube.labels" . | nindent 4 }}
 spec:
   {{- if not .Values.autoscaling.enabled }}
   replicas: {{ .Values.replicaCount }}
   {{- end }}
   selector:
     matchLabels:
-      {{- include "firstchart.selectorLabels" . | nindent 6 }}
+      {{- include "sonarqube.selectorLabels" . | nindent 6 }}
   template:
     metadata:
       {{- with .Values.podAnnotations }}
@@ -18,13 +18,13 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "firstchart.selectorLabels" . | nindent 8 }}
+        {{- include "sonarqube.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
       {{- end }}
-      serviceAccountName: {{ include "firstchart.serviceAccountName" . }}
+      serviceAccountName: {{ include "sonarqube.serviceAccountName" . }}
       securityContext:
         {{- toYaml .Values.podSecurityContext | nindent 8 }}
       containers:
@@ -35,7 +35,7 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - name: http
-              containerPort: 80
+              containerPort: 9000
               protocol: TCP
           livenessProbe:
             httpGet:
