--- a/sonarqube/templates/service.yaml
+++ b/sonarqube/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "firstchart.fullname" . }}
+  name: {{ include "sonarqube.fullname" . }}
   labels:
-    {{- include "firstchart.labels" . | nindent 4 }}
+    {{- include "sonarqube.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
