--- a/sonarqube/templates/service.yaml
+++ b/sonarqube/templates/service.yaml
@@ -1,15 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "sonarqube.fullname" . }}
-  labels:
-    {{- include "sonarqube.labels" . | nindent 4 }}
+  name: sonarqube
 spec:
-  type: {{ .Values.service.type }}
-  ports:
-    - port: {{ .Values.service.port }}
-      targetPort: http
-      protocol: TCP
-      name: http
   selector:
-    {{- include "sonarqube.selectorLabels" . | nindent 4 }}
+    app: sonarqube
+  ports:
+    - protocol: TCP
+      port: {{ .Values.sonarqube.service.port }}
+      targetPort: 9000
+  type: {{ .Values.sonarqube.service.type }}
